--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,4 +1,4 @@
-#This is my simple sway config
+#This is my sway config
 #I love it
 set $mod Mod4
 #Split all config to small parts
@@ -7,22 +7,14 @@ set $mod Mod4
 #Little bit of autostart
     exec mako --background-color "#000000BB" --border-color "#434c5eBB" --border-radius 3 
     #notification deamon
- 
-    #exec  pulseaudio --daemonize
-    #better sounds with pulseaudio
-#    #I was wrong here
-#    #I thought I needed to run pulseaudio because it didn't start by itself
-#    #but the error was in the disabled service. 
-#    #I don't understand how this happened, but I have already fixed it
-
     exec thunar --daemon
     #filemanager deamon for automounting
     exec autotiling
     #script to splitting direction changes
     exec keepassxc
     #foss password manager
-    exec mkfifo $SWAYSOCK.wob && tail -f $SWAYSOCK.wob | wob -a bottom  --background-color "#00000000" --border-color "#88000000" 
-    #display volume/brightness percentage bar by wob
+    exec mkfifo $SWAYSOCK.wob && tail -f $SWAYSOCK.wob | wob -a bottom  --background-color "#00000000" --border-color "#99000000"   --bar-color "#DD888888"
+   #display volume/brightness percentage bar by wob
 
 #Customization
 
@@ -46,9 +38,9 @@ set $mod Mod4
     bindsym --to-code $mod+Shift+q kill
 
     # Start bemenu with colors
-    bindsym --to-code $mod+d exec "bemenu-run --tf '#BBBBBB' --tb '#000000' --fb '#000000' --ff '#EEEEEE' --nb '#000000' --nf '##BBBBBB' --hb '#484848' --hf '#EEEEEE'  -p 'start >'"
-
-    bindsym --to-code Menu exec "bemenu-run --tf '#BBBBBB' --tb '#000000' --fb '#000000' --ff '#EEEEEE' --nb '#000000' --nf '##BBBBBB' --hb '#484848' --hf '#EEEEEE'  -p 'start >'"
+    set $menu "bemenu-run --tf '#BBBBBB' --tb '#000000' --fb '#000000' --ff '#EEEEEE' --nb '#000000' --nf '##BBBBBB' --hb '#484848' --hf '#EEEEEE'  -p 'start >'"
+    bindsym --to-code $mod+d exec $menu
+    bindsym --to-code Menu exec $menu 
 
     # Reload the configuration file
     bindsym --to-code $mod+Shift+c reload
@@ -59,16 +51,21 @@ set $mod Mod4
     # Screenshot with grimshot
     bindsym --to-code Print exec grimshot --notify copy area
 
+    # Fast open Thunar
+    bindsym --to-code $mod+Shift_R exec thunar 
 
 #Control volume and backlight
 
-   #bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +7% 
-   #bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -7%
-   
+   #Change volume
    bindsym XF86AudioRaiseVolume exec pamixer -ui 2 && pamixer --get-volume > $SWAYSOCK.wob
    bindsym XF86AudioLowerVolume exec pamixer -ud 2 && pamixer --get-volume > $SWAYSOCK.wob
-   bindsym XF86AudioMute exec pamixer --toggle-mute && ( pamixer --get-mute && echo 0 > $SWAYSOCK.wob )   
 
+   #Change volume above 100% (without wob)
+   bindsym Control+XF86AudioRaiseVolume exec pamixer -ui 2 --allow-boost
+   bindsym Control+XF86AudioLowerVolume exec pamixer -ud 2 --allow-boost
+
+
+   #Change brightness
    bindsym XF86MonBrightnessUp exec light -A 7 && light -G | cut -d'.' -f1 > $SWAYSOCK.wob
    bindsym XF86MonBrightnessDown exec light -U 7 && light -G | cut -d'.' -f1 > $SWAYSOCK.wob
 
